--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
         <div class="muted">Invite your friends — play together</div>
         <img class="decor" src="/assets/chess-pieces/boards/8x8_pink_1Kbyte_gambit.svg" alt="decor" />
       </div>
-      <svg class="floating-piece" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path fill="#fff" d="M10 90 L30 10 L50 90 Z" /></svg>
+  <svg class="floating-piece" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><path fill="#0b1220" d="M10 90 L30 10 L50 90 Z" /></svg>
     </header>
 
     <section class="card lobby">
